# cpp-camera-iq-toolkit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
configs/: datasets.example.json
data/: cie1931_2deg_cmf.csv  cie_d50.csv  cie_d55.csv
data/samples/: README.md
data/samples/manifest_fixture/: README.md
data/samples/manifest_fixture/Images/: coord.csv
data/samples/manifest_fixture/Images/CCSG/: CCSG_f9.0_1:100_ISO200_DSCF0001.RAF
docs/: DATASETS.md
docs/reports/: BILINEAR_DEMOSAIC.md  CAMERA_IQ_COVERAGE.md  CCM_FIT.md  DARK_CALIBRATION.md  DARK_FRAME_NOISE.md  EXPOSURE_RESPONSE.md  FUJI_XT100_CCSG_MANIFEST.md  OECF_FIT.md  OECF_STEPCHART.md  PATCH_EXTRACTION.md  RAW_CHART_LOCALIZATION.md  RAW_STATS.md  SFR_MTF.md  SFR_MTF_ARCHIVE_INVENTORY.md  SG_REFERENCE_PROVENANCE.md  SPECTRAL_ARCHIVE_INVENTORY.md  SPECTRAL_SENSITIVITY.md
include/camera_iq/: cfa_stats.hpp  chart_localization.hpp  color_reference.hpp  colorimetry.hpp  commands.hpp  csv.hpp  dark_calibration.hpp  dataset_config.hpp  demosaic.hpp  exposure_response.hpp  filename_meta.hpp  imatest_stepchart.hpp  json_writer.hpp  localization_diagnosis.hpp  manifest.hpp  noise.hpp  oecf_fit.hpp  output_file.hpp  patches.hpp  raw_meta.hpp  roi.hpp  sfr.hpp  spectral_closure.hpp  spectral_quality.hpp  spectral_response.hpp  spectral_smi.hpp  stepchart_localization.hpp  stepchart_raw.hpp  toolkit.hpp
src/: cfa_stats.cpp  chart_localization.cpp  cmd_ccm_fit.cpp  cmd_dark_calibration.cpp  cmd_demosaic.cpp  cmd_exposure_response.cpp  cmd_manifest.cpp  cmd_noise.cpp  cmd_oecf_fit.cpp  cmd_oecf_stepchart.cpp  cmd_patches.cpp  cmd_raw_stats.cpp  cmd_reference_info.cpp  cmd_sfr.cpp  cmd_spectral_closure.cpp  cmd_spectral_quality.cpp  cmd_spectral_response.cpp  cmd_spectral_smi.cpp  color_reference.cpp  colorimetry.cpp  dark_calibration.cpp  dataset_config.cpp  demosaic.cpp  exposure_response.cpp  filename_meta.cpp  imatest_stepchart.cpp  json_writer.cpp  localization_diagnosis.cpp  main.cpp  manifest.cpp  noise.cpp  oecf_fit.cpp  output_file.cpp  patches.cpp  raw_meta.cpp  roi.cpp  sfr.cpp  spectral_closure.cpp  spectral_quality.cpp  spectral_response.cpp  (+4 more)
tests/: harness.hpp  test_cfa_stats.cpp  test_chart_localization.cpp  test_cli_basic.cpp  test_cmd_ccm_fit.cpp  test_cmd_dataset_labels.cpp  test_cmd_exposure_response.cpp  test_cmd_noise.cpp  test_cmd_oecf_stepchart.cpp  test_cmd_patches.cpp  test_cmd_sfr.cpp  test_cmd_spectral_closure.cpp  test_cmd_spectral_quality.cpp  test_cmd_spectral_response.cpp  test_cmd_spectral_smi.cpp  test_color_reference.cpp  test_colorimetry.cpp  test_dark_calibration.cpp  test_dataset_config.cpp  test_demosaic.cpp  test_exposure_response.cpp  test_exposure_series.cpp  test_filename_meta.cpp  test_imatest_stepchart.cpp  test_json_writer.cpp  test_localization_diagnosis.cpp  test_manifest_json.cpp  test_manifest_scan.cpp  test_noise.cpp  test_oecf_fit.cpp  test_output_file.cpp  test_patches.cpp  test_raw_meta.cpp  test_roi.cpp  test_sfr.cpp  test_spectral_closure.cpp  test_spectral_quality.cpp  test_spectral_response.cpp  test_spectral_smi.cpp  test_stepchart_localization.cpp  (+1 more)
tools/: check_public_paths.sh  check_sample_fixtures.sh  check_verify_ccsg_vs_xrite_behavior.sh  export_ccsg_xlsx.py  gen_cie_d50.py  gen_cie_d55.py  libraw_bilinear_compare.cpp  requirements.txt  sg_cgats_to_reflectance_csv.py  verify_ccsg_vs_xrite.py
